--- a/UTS_VB(DATA_KAMPUS)/UTS_VB(DATA_KAMPUS).vbproj
+++ b/UTS_VB(DATA_KAMPUS)/UTS_VB(DATA_KAMPUS).vbproj
@@ -76,6 +76,12 @@
     <Import Include="System.Xml.Linq" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="FormDosen.Designer.vb">
+      <DependentUpon>FormDosen.vb</DependentUpon>
+    </Compile>
+    <Compile Include="FormDosen.vb">
+      <SubType>Form</SubType>
+    </Compile>
     <Compile Include="FormStaff.Designer.vb">
       <DependentUpon>FormStaff.vb</DependentUpon>
     </Compile>
@@ -107,6 +113,9 @@
     </Compile>
   </ItemGroup>
   <ItemGroup>
+    <EmbeddedResource Include="FormDosen.resx">
+      <DependentUpon>FormDosen.vb</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="FormStaff.resx">
       <DependentUpon>FormStaff.vb</DependentUpon>
     </EmbeddedResource>
