--- a/UTS_VB(DATA_KAMPUS)/UTS_VB(DATA_KAMPUS).vbproj
+++ b/UTS_VB(DATA_KAMPUS)/UTS_VB(DATA_KAMPUS).vbproj
@@ -82,6 +82,18 @@
     <Compile Include="FormDosen.vb">
       <SubType>Form</SubType>
     </Compile>
+    <Compile Include="FormLogin.Designer.vb">
+      <DependentUpon>FormLogin.vb</DependentUpon>
+    </Compile>
+    <Compile Include="FormLogin.vb">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="FormMenu.Designer.vb">
+      <DependentUpon>FormMenu.vb</DependentUpon>
+    </Compile>
+    <Compile Include="FormMenu.vb">
+      <SubType>Form</SubType>
+    </Compile>
     <Compile Include="FormStaff.Designer.vb">
       <DependentUpon>FormStaff.vb</DependentUpon>
     </Compile>
@@ -115,6 +127,12 @@
   <ItemGroup>
     <EmbeddedResource Include="FormDosen.resx">
       <DependentUpon>FormDosen.vb</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="FormLogin.resx">
+      <DependentUpon>FormLogin.vb</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="FormMenu.resx">
+      <DependentUpon>FormMenu.vb</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="FormStaff.resx">
       <DependentUpon>FormStaff.vb</DependentUpon>
